include/altdss/capi/dss.h

    /*! 
    Description of the property.
    */
    ALTDSS_CAPI_DLL const char* DSSProperty_Get_Description(void);
    /*! 
    Name of Property
    */
    ALTDSS_CAPI_DLL const char* DSSProperty_Get_Name(void);
    /*!
    Get/set the value of the active property. The value must be specified as a string.
    */
    ALTDSS_CAPI_DLL const char* DSSProperty_Get_Val(void);
    ALTDSS_CAPI_DLL void DSSProperty_Set_Val(const char* Value);
    ALTDSS_CAPI_DLL void DSSProperty_Set_Name(const char* Value);
    ALTDSS_CAPI_DLL void DSSProperty_Set_Index(int32_t Value);